Fixed hero profile's alignment

--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -47,12 +47,14 @@ Header
 
 .profile {
   position: relative;
+  text-align: center;
 
   &__bio {
     opacity: 0;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
+    padding: 0 3rem;
   }
 
   &:hover {
